# werkzeug-interceptor

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
interceptor/: __init__.py
src/werkzeug_interceptor/: __init__.py
