[project]
name = "werkzeug-interceptor"
version = "0.1.3"
description = "Mock endpoints for testing endpoints"
authors = [
    { name = "Joe Paul", email = "joeirimpan@gmail.com" }
]
dependencies = ["werkzeug~=2.3.4", "colorama~=0.4.6"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["black~=23.3.0", "flake8~=5.0.4"]

[tool.rye.scripts]
lint = { chain = ["lint:black", "lint:flake8" ] }
"lint:black" = "black --check src"
"lint:flake8" = "flake8 src"
